[package]
name = "elpis-parser"
version = "0.1.0"
edition = "2021"

[lib]
name         = "elpis"
crate-type   = ["rlib", "cdylib"]

[dependencies]
epan-sys = { path = "../epan-sys", version = "0.1.0" }
plugshark = { path = "../plugshark", version = "0.1.0" }
anyhow = "1.0.69"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.1.0"
lazy_static = "1.4"
bitstream-io = "2.5.3"